# signet-solver

./: Cargo.toml  TODOs.md
.github/workflows/: ci.yaml
config/: demo.toml
config/demo/: networks.toml
crates/solver-account/: Cargo.toml
crates/solver-core/: Cargo.toml
crates/solver-core/src/: lib.rs
crates/solver-core/src/handlers/: order.rs
crates/solver-delivery/: Cargo.toml
crates/solver-delivery/src/implementations/signet/: bundle.rs
crates/solver-dex/: Cargo.toml
crates/solver-dex/src/: lib.rs  router.rs  uniswap_v4.rs
crates/solver-discovery/: Cargo.toml
crates/solver-discovery/src/implementations/signet/: cache.rs
crates/solver-order/src/implementations/standards/: signet.rs
crates/solver-service/: Cargo.toml
crates/solver-settlement/: Cargo.toml
crates/solver-types/src/: order.rs
examples/signet-host-txs/: Cargo.toml
examples/signet-host-txs/examples/: signet-host-txs.rs
examples/signet-host-txs/src/: lib.rs  main.rs
