[package]
name = "solver-account"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
alloy-consensus = "1.0"
alloy-network = "1.0"
alloy-primitives = "1.0"
alloy-signer = "1.0"
alloy-signer-local = "1.1"
async-trait = "0.1"
hex = "0.4"
solver-types = { path = "../solver-types" }
thiserror = "1.0"
toml = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }