[package]
name = "solver-core"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
alloy-primitives = { version = "1.0", features = ["serde"] }
alloy-sol-types = "1.0"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
rust_decimal = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solver-account = { path = "../solver-account" }
solver-config = { path = "../solver-config" }
solver-delivery = { path = "../solver-delivery" }
solver-discovery = { path = "../solver-discovery" }
solver-order = { path = "../solver-order" }
solver-pricing = { path = "../solver-pricing" }
solver-settlement = { path = "../solver-settlement" }
solver-storage = { path = "../solver-storage" }
solver-types = { path = "../solver-types" }
solver-dex = { path = "../solver-dex" }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
toml =  { workspace = true }
tracing = "0.1"
