[package]
name = "solver-delivery"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
alloy-consensus = "1.0"
alloy-eips = "1.0"
alloy-network = "1.1"
alloy-primitives = "1.0"
alloy-provider = "1.0"
alloy-rpc-types = "1.0"
alloy-signer = "1.0"
alloy-signer-local = "1.0"
alloy-sol-types = "1.0"
alloy-transport = "1.0"
alloy-transport-http = "1.0"
async-trait = "0.1"
chrono = "0.4"
hex = "0.4"
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signet-bundle = { git = "https://github.com/init4tech/signet-sdk", branch = "main" }
signet-constants = { git = "https://github.com/init4tech/signet-sdk", branch = "main" }
signet-tx-cache = { git = "https://github.com/init4tech/signet-sdk", branch = "main" }
signet-types = { git = "https://github.com/init4tech/signet-sdk", branch = "main" }
signet-zenith = { git = "https://github.com/init4tech/signet-sdk", branch = "main" }
solver-account = { path = "../solver-account" }
solver-dex = { path = "../solver-dex" }
solver-types = { path = "../solver-types" }
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread"] }
toml = { workspace = true }
tracing = "0.1"
