[package]
name = "solver-dex"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
alloy-primitives = { version = "1.0", features = ["serde"] }
alloy-sol-types = "1.0"
serde = { version = "1.0", features = ["derive"] }
solver-types = { path = "../solver-types" }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
hex = "0.4"
