[package]
name = "solver-discovery"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
alloy-contract = "1.0"
alloy-network = "1.0"
alloy-primitives = "1.0"
alloy-provider = { version = "1.0", features = ["ws"] }
alloy-pubsub = "1.0"
alloy-rpc-types = "1.0"
alloy-sol-types = "1.0"
alloy-transport = "1.0"
alloy-transport-http = "1.0"
alloy-transport-ws = "1.1"
async-trait = "0.1"
signet-constants = { git = "https://github.com/init4tech/signet-sdk", branch = "main" }
signet-types = { git = "https://github.com/init4tech/signet-sdk", branch = "main" }
signet-tx-cache = { git = "https://github.com/init4tech/signet-sdk", branch = "main" }
axum = "0.8"
futures = "0.3"
hex = "0.4"
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solver-types = { path = "../solver-types", features = ["oif-interfaces"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["sync", "rt-multi-thread"] }
toml = { workspace = true }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"

[dev-dependencies]
mockall = "0.13"
signet-zenith = { git = "https://github.com/init4tech/signet-sdk", branch = "main" }
