[package]
name = "solver-service"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[[bin]]
name = "solver"
path = "src/main.rs"

[dependencies]
alloy-primitives = { version = "1.0", features = ["std", "serde"] }
alloy-sol-types = "1.0"
async-trait = "0.1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
futures = "0.3"
hex = "0.4"
jsonwebtoken = "9.3"
once_cell = "1.20"
reqwest = "0.12"
rust_decimal = { workspace = true }
secp256k1 = { version = "0.31", features = ["recovery"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solver-account = { path = "../solver-account" }
solver-config = { path = "../solver-config" }
solver-core = { path = "../solver-core" }
solver-delivery = { path = "../solver-delivery" }
solver-discovery = { path = "../solver-discovery" }
solver-order = { path = "../solver-order" }
solver-pricing = { path = "../solver-pricing" }
solver-settlement = { path = "../solver-settlement" }
solver-storage = { path = "../solver-storage" }
solver-types = { path = "../solver-types", features = ["oif-interfaces"] }
subtle = "2.6"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
toml = { workspace = true }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "normalize-path"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
mockall = "0.13"
solver-settlement = { path = "../solver-settlement", features = ["testing"] }
solver-storage = { path = "../solver-storage", features = ["testing"] }
tempfile = { workspace = true }
tokio = { workspace = true }
