[package]
name = "solver-settlement"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
alloy-primitives = "1.0"
alloy-provider = "1.0"
alloy-rpc-types = "1.0"
alloy-sol-types = "1.0"
alloy-transport = "1.1"
alloy-transport-http = "1.0"
async-trait = "0.1"
mockall = { version = "0.13", optional = true }
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = { workspace = true }
solver-storage = { path = "../solver-storage" }
solver-types = { path = "../solver-types" }
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "sync"] }
toml = { workspace = true }
tracing = "0.1"

[features]
testing = ["mockall"]