[package]
name = "signet-host-txs-example"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
solver-config = { path = "../../crates/solver-config" }
solver-delivery = { path = "../../crates/solver-delivery" }
solver-types = { path = "../../crates/solver-types" }
signet-tx-cache = { git = "https://github.com/init4tech/signet-sdk", branch = "main" }
signet-types = { git = "https://github.com/init4tech/signet-sdk", branch = "main" }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
alloy-network = "1.0"
alloy-provider = "1.0"
alloy-primitives = "1.0"
serde_json = "1.0"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
toml = "0.9"
